# pcb-mill

./: .gitignore
firmware/Marlin/: platformio.ini
firmware/Marlin/Marlin/: Configuration.h  Configuration_adv.h
firmware/cnc/: Makefile
firmware/cnc/src/: main.c  startup.c  systick.c  systick.h  uart.c  uart.h
firmware/grblHAL/LPC176x/: CMakeLists.txt  arm-none-eabi-toolchain.cmake
firmware/grblHAL/LPC176x/src/: my_machine.h
firmware/grblHAL/LPC176x/src/grbl/: config.h  crossbar.h
